--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap": "~1.0.0"
+    "angular-bootstrap": "~1.0.3",
+    "jquery-ui": "~1.11.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
