--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "~1.0.3",
-    "jquery-ui": "~1.11.4"
+    "jquery-ui": "~1.11.4",
+    "Swiper": "swiper#~3.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
