--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
     "angular-touch": "^1.4.0",
     "angular-bootstrap": "~1.0.3",
     "jquery-ui": "~1.11.4",
-    "Swiper": "swiper#~3.3.0"
+    "Swiper": "swiper#~3.3.0",
+    "font-awesome": "fontawesome#~4.5.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
