--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,8 @@
     "angular-bootstrap": "~1.0.3",
     "jquery-ui": "~1.11.4",
     "Swiper": "swiper#~3.3.0",
-    "font-awesome": "fontawesome#~4.5.0"
+    "font-awesome": "fontawesome#~4.5.0",
+    "angularUtils-pagination": "angular-utils-pagination#^0.10.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
