--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "jquery-ui": "~1.11.4",
     "Swiper": "swiper#~3.3.0",
     "font-awesome": "fontawesome#~4.5.0",
-    "angularUtils-pagination": "angular-utils-pagination#^0.10.0"
+    "angularUtils-pagination": "angular-utils-pagination#^0.10.0",
+    "awesome-bootstrap-checkbox": "^0.3.5"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
