--- a/bower.json
+++ b/bower.json
@@ -17,7 +17,8 @@
     "Swiper": "swiper#~3.3.0",
     "font-awesome": "fontawesome#~4.5.0",
     "angularUtils-pagination": "angular-utils-pagination#^0.10.0",
-    "awesome-bootstrap-checkbox": "^0.3.5"
+    "awesome-bootstrap-checkbox": "^0.3.5",
+    "angular-ui-router": "^0.2.18"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
