--- a/bower.json
+++ b/bower.json
@@ -19,10 +19,14 @@
     "angularUtils-pagination": "angular-utils-pagination#^0.10.0",
     "awesome-bootstrap-checkbox": "^0.3.5",
     "angular-ui-router": "^0.2.18",
-    "angular-spinner": "~0.8.0"
+    "angular-spinner": "~0.8.0",
+    "angular-modal-service": "^0.9.10"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
+  },
+  "resolutions": {
+    "angular": "^1.4.0"
   },
   "appPath": "app",
   "moduleName": "leparticiousUiApp",
