--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,8 @@
     "awesome-bootstrap-checkbox": "^0.3.5",
     "angular-ui-router": "^0.2.18",
     "angular-spinner": "~0.8.0",
-    "angular-modal-service": "^0.9.10"
+    "angular-modal-service": "^0.9.10",
+    "angularjs-datepicker": "^2.1.6"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
