--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "node": ">=0.10.0"
   },
   "dependencies": {
-    "connect-modrewrite": "^0.8.5"
+    "connect-modrewrite": "^0.8.5",
+    "imagemin": "^4.0.0"
   }
 }
