--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
+	"material-design-lite": "^1.1.3",
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-aria": "^1.4.0",
