--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,6 @@
   "version": "0.0.0",
   "dependencies": {
     "angular": "^1.4.0",
-	"material-design-lite": "^1.1.3",
     "bootstrap": "^3.2.0",
     "angular-animate": "^1.4.0",
     "angular-aria": "^1.4.0",
@@ -22,7 +21,8 @@
     "angular-ui-router": "^0.2.18",
     "angular-spinner": "~0.8.0",
     "angular-modal-service": "^0.9.10",
-    "angularjs-datepicker": "^2.1.6"
+    "angularjs-datepicker": "^2.1.6",
+    "angular-material": "^1.1.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
