--- a/bower.json
+++ b/bower.json
@@ -21,8 +21,8 @@
     "angular-ui-router": "^0.2.18",
     "angular-spinner": "~0.8.0",
     "angular-modal-service": "^0.10.1",
-    "angularjs-datepicker": "^2.1.6",
-    "angular-material": "^1.1.0"
+    "angular-material": "^1.1.0",
+    "ng-rating": "^0.0.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
