--- a/bower.json
+++ b/bower.json
@@ -22,7 +22,8 @@
     "angular-spinner": "~0.8.0",
     "angular-modal-service": "^0.10.1",
     "angular-material": "^1.1.0",
-    "ng-rating": "^0.0.9"
+    "ng-rating": "^0.0.9",
+    "a0-angular-storage": "^0.0.15"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
