--- a/bower.json
+++ b/bower.json
@@ -23,7 +23,9 @@
     "angular-modal-service": "^0.10.1",
     "angular-material": "^1.1.0",
     "ng-rating": "^0.0.9",
-    "a0-angular-storage": "^0.0.15"
+    "a0-angular-storage": "^0.0.15",
+    "angular-wizard": "^0.9.0",
+    "angular-material-data-table": "^0.10.9"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
