--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,8 @@
     "ng-rating": "^0.0.9",
     "a0-angular-storage": "^0.0.15",
     "angular-wizard": "^0.9.0",
-    "angular-material-data-table": "^0.10.9"
+    "angular-material-data-table": "^0.10.9",
+    "ng-file-upload": "^12.2.13"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
