--- a/bower.json
+++ b/bower.json
@@ -23,13 +23,14 @@
     "angular-modal-service": "^0.10.1",
     "angularjs-datepicker": "^2.1.6",
     "spring-security-csrf-token-interceptor": "^0.1.5",
-    "angular-modal-service": "^0.10.1",
     "angular-material": "^1.1.0",
     "ng-rating": "^0.0.9",
     "a0-angular-storage": "^0.0.15",
     "angular-wizard": "^0.9.0",
     "angular-material-data-table": "^0.10.9",
-    "ng-file-upload": "^12.2.13"
+    "ng-file-upload": "^12.2.13",
+    "rxjs": "^4.1.0",
+    "rx-angular": "angular-rx#^1.1.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
